--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@types/node": "^16.18.87",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "@types/styled-components": "^5.1.34",
+    "nanoid": "^3.1.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
+    "styled-components": "^5.2.1",
     "typescript": "^4.9.5",
+    "use-immer": "^0.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
